<resources>
    <string name="app_name">Spotlyze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="email_required">Email Required</string>
    <string name="invaid_email">Invalid Email</string>
    <string name="email">Email</string>
    <string name="password_must_have_8_characters">Password must be at least 8 characters long!</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account </string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="history">History</string>
    <string name="button_settings">Button Settings</string>
    <string name="button_history">Button History</string>
    <string name="button_search">Button Search</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language">Language</string>
    <string name="btn_language">Button Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="for_you">For you</string>
    <string name="skincare_picture">Skincare Picture</string>
    <string name="detail_skincare">Detail Skincare</string>
    <string name="button_favourite">Button Favourite</string>
    <string name="ingredients">Ingredients</string>
    <string name="back_button">Back Button</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="aready_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_picture_profile">Edit picture profile</string>
    <string name="camera_button">Camera Button</string>
    <string name="none" />
    <string name="search_here">Search here…</string>
    <string name="what_best_describes_your_skin_type">What best describes your skin type?</string>
    <string name="dry">Dry</string>
    <string name="oily">Oily</string>
    <string name="combination">Combination</string>
    <string name="how_would_you_describe_your_skin_s_sensitivity">How would you describe your skin\'s sensitivity?</string>
    <string name="normal_resilient_rarely_reacts_to_new_products">Normal (resilient, rarely reacts to new products)</string>
    <string name="sensitive_prone_to_irritation_or_redness">Sensitive (prone to irritation or redness)</string>
    <string name="what_specific_skin_concerns_would_you_like_to_address">What specific skin concerns would you like to address?</string>
    <string name="skin_brightening">Skin Brightening</string>
    <string name="uneven_skin_texture">Uneven Skin Texture</string>
    <string name="skin_dullness">Skin Dullness</string>
    <string name="hydration_and_nourishment">Hydration and Nourishment</string>
    <string name="acne_and_breakouts">Acne and Breakouts</string>
    <string name="fine_lines_and_wrinkles">Fine Lines and Wrinkles</string>
    <string name="dark_circles_and_eye_bags">Dark Circles and Eye Bags</string>
    <string name="submit">Submit</string>
    <string name="quiz">Quiz</string>
    <string name="analyze">Analyze</string>
    <string name="thanks_for_filling_the_questions">Thanks for Filling The Questions</string>
    <string name="verified_image">Verified Image</string>
    <string name="get_the_scan_result">Get The Scan Result</string>
    <string name="for_skin_type">For skin type</string>
    <string name="how_to_use">How to use</string>
    <string name="category">Category</string>
    <string name="treatment">Treatment</string>
    <string name="cleanser">Cleanser</string>
    <string name="mask">Mask</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="yeay_here_are_our_recommendations_to_you">Yeay, here are our recommendations to you!</string>
    <string name="summary">Summary</string>
    <string name="cancel">Cancel</string>
    <string name="your_information">Your Information</string>
    <string name="offline">You are Offline</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="desc">Descending</string>
    <string name="asc">Ascending</string>
    <string name="tv_home_desc">Analyze your skin and give you what you need</string>
    <string name="try_now">Try now</string>
    <string name="explore_skincare">Explore Skincare</string>
    <string name="made_in_indonesia">Made in Indonesia</string>
    <string name="see_all">See all</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="no_data_yet">No data yet!</string>
    <string name="close">close</string>
    <string name="here_are_our_recommendations_for_you">Here are our recommendations for you</string>
    <string name="next">Next</string>
    <string name="password_not_match">Password not match!</string>
    <string name="register">Register</string>
    <string name="invalid_email">Invalid email</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="oh_no">Oh no!</string>
    <string name="congrats">Congratulation!</string>
    <string name="unknown">Unknown</string>
    <string name="you_have_a_dark_circle">You have a dark circle!</string>
    <string name="your_skin_is_normal">Your skin is normal!</string>
    <string name="you_have_wrinkles">You have wrinkles</string>
    <string name="you_have_acne">You have acne</string>
    <string name="error">Error</string>
    <string name="you_are_offline">You seem to be offline!</string>
    <string name="price">Price</string>
</resources>