<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/how_would_you_describe_your_skin_s_sensitivity"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupSkinSensitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_resilient_rarely_reacts_to_new_products" />

        <RadioButton
            android:id="@+id/radioSensitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitive_prone_to_irritation_or_redness" />
    </RadioGroup>
</LinearLayout>
