<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context="com.bangkit.spotlyze.ui.auth.login.LoginActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome">

        <include
            android:id="@+id/usernameInput"
            layout="@layout/username_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/emailConstraint"
        app:layout_constraintStart_toStartOf="@+id/emailConstraint"
        app:layout_constraintTop_toBottomOf="@+id/emailConstraint">

        <include
            android:id="@+id/passwordInput"
            layout="@layout/password_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/red_pink"
        app:layout_constraintEnd_toEndOf="@+id/passwordConstraint"
        app:layout_constraintTop_toBottomOf="@+id/passwordConstraint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/passwordConstraint"
        app:layout_constraintStart_toStartOf="@+id/passwordConstraint"
        app:layout_constraintTop_toBottomOf="@+id/passwordConstraint" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_an_account"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/red_pink"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/tvCreateAccount"
        app:layout_constraintTop_toTopOf="@+id/tvCreateAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>