<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bangkit.spotlyze.ui.skincare.detail.DetailSkincareActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/skincarePicture"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/skincare_picture"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_favourite"
            android:src="@drawable/ic_unfav"
            app:layout_constraintBottom_toBottomOf="@+id/skincarePicture"
            app:layout_constraintEnd_toEndOf="@+id/skincarePicture"
            app:layout_constraintTop_toTopOf="@+id/skincarePicture"
            app:layout_constraintVertical_bias="0.9"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skincarePicture"
            tools:text="Title" />

        <TextView
            android:id="@+id/tvSkinTypeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/for_skin_type"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvCategoryInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="@+id/tvSkinTypeInfo"
            app:layout_constraintTop_toBottomOf="@+id/tvSkinTypeInfo" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvCategoryInfo"
            app:layout_constraintStart_toStartOf="@+id/tvSkinType"
            app:layout_constraintTop_toTopOf="@+id/tvCategoryInfo"
            tools:text="Wash off" />

        <TextView
            android:id="@+id/tvSkinType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvSkinTypeInfo"
            app:layout_constraintStart_toEndOf="@+id/tvSkinTypeInfo"
            app:layout_constraintTop_toTopOf="@+id/tvSkinTypeInfo"
            tools:text="Skin type, skin tyerjkejwhfd" />

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="@+id/tvSkinTypeInfo"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryInfo" />

        <ImageView
            android:id="@+id/btnIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_skincare"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tvIngredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toEndOf="@+id/tvIngredients"
            app:layout_constraintTop_toTopOf="@+id/tvIngredients" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />

        <TextView
            android:id="@+id/tvHowToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_to_use"
            app:layout_constraintStart_toStartOf="@+id/tvIngredients"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <ImageView
            android:id="@+id/btnHowToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_skincare"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tvHowToUse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toEndOf="@+id/tvHowToUse"
            app:layout_constraintTop_toTopOf="@+id/tvHowToUse" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>